[tool.poetry]
name = "object_detection_keras_unet"
version = "0.1.0"
description = "Detecting houses in images using Keras and UNET architecture"
authors = ["Chris Birch <datapointchris@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyter = "^1.0.0"
tensorflow = "^2.9.1"
tqdm = "^4.64.0"
opencv-python = "^4.5.5"
matplotlib = "^3.5.2"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
